nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: testapp1
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
